# bob-is-building

./: .gitignore  README.md  db_client.py  diagnose_data.py  firestore.py  pyproject.toml  requirements.txt  supabase.py  supabase_conn.py  supabase_test.py
.devcontainer/: devcontainer.json
Viewer Activity/: 000_init.sql  README.md  analyzer.py  app.py  scoring.py  semantics_lite.py  supabase_manager.py  synth.py
bot_account_detection/: README.md  __init__.py  kyc.py  trust_score.py
core/: analysis_engine.py  supabase_client.py
data/: README.md  events.json  generate_fake_data.py  transactions.json  user_info.json  users.json  videos.json
frontend/: app.py
frontend/pages/: 1_Upload_Video.py  auth.py  creator_Dashboard.py  creator_dashboard.py  email_verified.py  kyc.py  upload_video.py  video_analytics.py  video_payouts.py
revenue_split/: README.md  README_legacy.md  __init__.py  admin_revenue.py  preview_2025_07.csv  revenue_split.py  revenue_split_legacy.py  revenue_split_monthly.py  revenue_split_monthly_legacy.py
ui/: components.py
viewer_activity/: README.md  __init__.py  analyzer.py  schema_probe.py  scoring.py  supabase_manager.py  synth.py
