[project]
name = "bob-is-building"
version = "0.1.0"
description = "A Streamlit application for Bob and the Builders"
authors = [
    {name = "Bob and the Builders"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.49.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
